--- a/SadlDb/MmmDb.csproj
+++ b/SadlDb/MmmDb.csproj
@@ -46,7 +46,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SadlData\SadlData.csproj">
+    <ProjectReference Include="..\SadlData\MmmData.csproj">
       <Project>{F907FED4-0C84-4607-89B5-456084EEF9B8}</Project>
       <Name>SadlData</Name>
     </ProjectReference>
