--- a/MmmDemo/MoneyMarkettingManager.csproj
+++ b/MmmDemo/MoneyMarkettingManager.csproj
@@ -246,11 +246,11 @@
     <Resource Include="Images\logo.png" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SadlData\MmmData.csproj">
+    <ProjectReference Include="..\MmmData\MmmData.csproj">
       <Project>{F907FED4-0C84-4607-89B5-456084EEF9B8}</Project>
       <Name>MmmData</Name>
     </ProjectReference>
-    <ProjectReference Include="..\SadlDb\MmmDb.csproj">
+    <ProjectReference Include="..\MmmDb\MmmDb.csproj">
       <Project>{CEF03050-6C1A-48D9-AC31-281B72B2EE63}</Project>
       <Name>MmmDb</Name>
     </ProjectReference>
