--- a/MmmData/MmmData.csproj
+++ b/MmmData/MmmData.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{F907FED4-0C84-4607-89B5-456084EEF9B8}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SadlData</RootNamespace>
-    <AssemblyName>SadlData</AssemblyName>
+    <RootNamespace>MmmData</RootNamespace>
+    <AssemblyName>MmmData</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
